--- a/app/assets/stylesheets/public/activities.scss
+++ b/app/assets/stylesheets/public/activities.scss
@@ -184,6 +184,8 @@
   height: 100px;
   background-color: white;
   .activity-show-follow{
+    display: flex;
+    -ms-flex-align: center;
     position: sticky;
     top: 0;
     width: 100%;
