--- a/app/assets/stylesheets/public/activities.scss
+++ b/app/assets/stylesheets/public/activities.scss
@@ -212,8 +212,15 @@
       font-size: 10px;
     }
     .activity-comment-icon{
-      margin-left: 50px;
+      margin-left: 10px;
       line-height: 60px;
+      .comment-icon-text{
+        font-size: 10px;
+        text-decoration: none;
+        .comment-icon{
+          font-size: 30px;
+        }
+      }
     }
   }
 }
@@ -263,7 +270,19 @@
         margin-top: 10px;
         font-size: 20px;
         color: red;
-        display: inline-block;
+        display: block;
+        .count{
+          display: inline-block;
+        }
+      }
+      .got-comment-count{
+        margin-top: 10px;
+        font-size: 17px;
+        color: blue;
+        display: block;
+        .count{
+          display: inline-block;
+        }
       }
       .activity-show-btn{
         margin: 0 auto;
