feature/comment-notifications

--- a/app/assets/stylesheets/public/activities.scss
+++ b/app/assets/stylesheets/public/activities.scss
@@ -330,6 +330,7 @@
   .activity-comment{
     width: 100%;
     position: relative;
+    margin-bottom: 30px;
     .activity-comment-btn{
       position: absolute;
       top: 100px;
