fix/notifications-activity

--- a/app/views/public/notifications/_notification.html.haml
+++ b/app/views/public/notifications/_notification.html.haml
@@ -45,12 +45,17 @@
       - when 'favorite' then
         = link_to 'あなたの投稿', public_activity_path(activity_id), data: { 'turbolinks': false }, style: "font-weight: bold;"
         = "にいいねしました"
-      - when 'activity' then
-        = link_to '活動報告', public_activity_path(activity_id), data: { 'turbolinks': false }, style: "font-weight: bold;"
-        = "を投稿しました"
       - when 'comment' then
         = link_to 'あなたの投稿', public_activity_path(activity_id), data: { 'turbolinks': false }, style: "font-weight: bold;"
         = "にコメントしました"
+      - when 'activity_for_follow' then
+        = link_to '活動報告', public_activity_path(activity_id), data: { 'turbolinks': false }, style: "font-weight: bold;"
+        = "を投稿しました(フォローメンバー)"
+      - when 'activity_for_community' then
+        = link_to '活動報告', public_activity_path(activity_id), data: { 'turbolinks': false }, style: "font-weight: bold;"
+        = "を投稿しました"
+        = link_to "#{community.name}で同チーム", public_community_path(community_id), data: { 'turbolinks': false }
+
 
   .small.text-muted.text-right
     = time_ago_in_words(notification.created_at).upcase + "前"
