--- a/app/assets/stylesheets/public/chat_rooms.scss
+++ b/app/assets/stylesheets/public/chat_rooms.scss
@@ -9,7 +9,8 @@
     border: 1px solid;
     border-radius: 10px;
     padding: 15px;
-    height: 90%;
+    height: fit-content;
+    max-height: 510px;
     overflow: scroll;
     p{
       display: inline;
