feature/event-controller

--- a/app/views/public/activities/edit.html.haml
+++ b/app/views/public/activities/edit.html.haml
@@ -1,7 +1,7 @@
 = render 'layouts/header_menu'
 
 .activity-new-edit-title
-  %h2 アクティビティ編集画面
+  %h2 活動報告編集画面
   - if @activity.errors.any?
     .alert
       %ul.list-style-none
