--- a/app/views/public/activities/new.html.haml
+++ b/app/views/public/activities/new.html.haml
@@ -1,7 +1,7 @@
 = render 'layouts/header_menu'
 
 .activity-new-edit-title
-  %h2 アクティビティ作成画面
+  %h2 活動報告作成画面
   - if @activity.errors.any?
     .alert
       %ul.list-style-none
