--- a/app/views/layouts/_header_menu.html.haml
+++ b/app/views/layouts/_header_menu.html.haml
@@ -45,6 +45,8 @@
         %li
           = link_to "みんなの活動報告", public_activities_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
         %li
+          = link_to "イベント参加", public_events_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+        %li
           %i.fa-solid.fa-right-from-bracket
           = link_to "ログアウト", destroy_customer_session_path, data: { 'turbolinks': false }, method: :delete, class: "btn btn-secondary menu-sp-btn"
       - else
@@ -68,3 +70,5 @@
         = link_to "個別チャット", public_matchings_path, data: { 'turbolinks': false }, class: "btn btn-info"
       %li
         = link_to "みんなの活動報告", public_activities_path, data: { 'turbolinks': false }, class: "btn btn-info"
+      %li
+        = link_to "イベント参加", public_events_path, data: { 'turbolinks': false }, class: "btn btn-info"
