--- a/app/views/public/communities/index.html.haml
+++ b/app/views/public/communities/index.html.haml
@@ -23,12 +23,13 @@
           [コミュニティオーナー]
           %br
           .community-owner-img
-            - if @owner.profile_image.present?
-              = image_tag @owner.profile_image
-            - else
-              = image_tag 'no_image'
-            .owner-name
-              = @owner.name
+            = link_to public_customer_path(@owner), data: { 'turbolinks': false } do
+              - if @owner.profile_image.present?
+                = image_tag @owner.profile_image
+              - else
+                = image_tag 'no_image'
+              .owner-name
+                = @owner.name
         %hr
         .community-show-link-area
           = link_to "コミュニティ詳細へ", public_community_path(community), class: "btn-info community-show-link", data: { 'turbolinks': false }
