--- a/app/views/public/events/new.html.haml
+++ b/app/views/public/events/new.html.haml
@@ -1,1 +1,57 @@
 = render 'layouts/header_menu'
+
+.event-new-title
+  %h2 イベント作成画面
+  - if @event.errors.any?
+    .alert
+      %ul.list-style-none
+        - @event.errors.full_messages.each do |message|
+          %li
+            = message
+
+= form_with model: [:public, @event], local: true do |f|
+  .event-new-container.px-0.px-sm-0
+    %table.table.table-striped.event-new-table{:width=>"100%",:border=>"1"}
+      %colgroup
+        %col{width: "19%"}
+        %col{width: "81%"}
+          %tr
+            %th{scope:"row"} イベント画像
+            %td
+              = f.file_field :event_image, accept: 'image/*'
+              #new-event-image
+              #edit-event-image
+          %tr
+            %th{scope:"row"} イベント名
+            %td
+              = f.text_field :event_name, class: 'form-control'
+          %tr
+            %th{scope:"row"} 所属コミュニティ
+            %td 
+              = f.collection_select :community_id, current_customer.communities, :id, :name
+          %tr
+            %th{scope:"row"} 開催日(開始時間)
+            %td
+              = f.datetime_field :event_start_time, class: 'form-control'
+          %tr
+            %th{scope:"row"} 開催日(終了時間)
+            %td
+              = f.datetime_field :event_end_time, class: 'form-control'
+          %tr
+            %th{scope:"row"} 参加費用
+            %td
+              = f.number_field :entrance_fee, class: 'form-control'
+          %tr
+            %th{scope:"row"} 開催場所
+            %td
+              = f.text_field :place, class: 'form-control'
+          %tr
+            %th{scope:"row"} 開催場所住所
+            %td
+              = f.text_field :address, class: 'form-control'
+              %i.block ※開催場所の地図を表示する事ができます。
+          %tr
+            %th{scope:"row"} イベント補足
+            %td
+              = f.text_area :introduction, style: "width:90%"
+          = f.submit "イベントを作成", class: "btn btn-info event-new-btn", data: { confirm: 'こちらの内容で作成します。よろしいですか？' }
