--- a/app/views/public/events/new.html.haml
+++ b/app/views/public/events/new.html.haml
@@ -32,15 +32,15 @@
           %tr
             %th{scope:"row"} 開催日(開始時間)
             %td
-              = f.datetime_field :event_start_time, class: 'form-control'
+              = f.datetime_field :event_start_time, style: "width:260px"
           %tr
             %th{scope:"row"} 開催日(終了時間)
             %td
-              = f.datetime_field :event_end_time, class: 'form-control'
+              = f.datetime_field :event_end_time, style: "width:260px"
           %tr
             %th{scope:"row"} 参加費用
             %td
-              = f.number_field :entrance_fee, class: 'form-control'
+              = f.number_field :entrance_fee, style: "width:260px"
           %tr
             %th{scope:"row"} 開催場所
             %td
@@ -50,6 +50,15 @@
             %td
               = f.text_field :address, class: 'form-control'
               %i.block ※開催場所の地図を表示する事ができます。
+          %tr
+            %th{scope:"row"} 楽曲
+            %td
+              #songs
+                = f.fields_for :songs, id: 'js-song-field' do |song|
+                  .field
+                    = render 'public/events/song_fields', f: song
+                .links{data: {count: @event.songs.count}}
+                  = link_to_add_association '曲を追加',f ,:songs ,{ class: 'btn btn-success js-add-song-field-btn' }
           %tr
             %th{scope:"row"} イベント補足
             %td
