--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
     = favicon_link_tag'favicon.ico'
     = csrf_meta_tags
     = csp_meta_tag
+    = include_gon
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     %link{:href => "//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css", :rel => "stylesheet", :type => "text/css"}/
@@ -21,4 +22,3 @@
         = content_tag(:div, value, class: key)
     = yield
     %script{:crossorigin => "anonymous", :src => "https://kit.fontawesome.com/f47d9591f1.js"}
-
