--- a/app/views/public/events/show.html.haml
+++ b/app/views/public/events/show.html.haml
@@ -28,12 +28,13 @@
               [イベント作成者]
               %br
               .event-owner-img
-                - if @owner.profile_image.present?
-                  = image_tag @owner.profile_image
-                - else
-                  = image_tag 'no_image'
-                .owner-name
-                  = @owner.name
+                = link_to public_customer_path(@owner), data: { 'turbolinks': false } do
+                  - if @owner.profile_image.present?
+                    = image_tag @owner.profile_image
+                  - else
+                    = image_tag 'no_image'
+                  .owner-name
+                    = @owner.name
             %hr
             %p.card-text
             - if @owner == current_customer
@@ -67,11 +68,11 @@
             %tr
               %th{scope:"row"} 開始時間
               %td
-                = l @event.event_start_time
+                = l @event.event_start_time, format: :short
             %tr
               %th{scope:"row"} 終了時間
               %td
-                = l @event.event_end_time
+                = l @event.event_end_time, format: :short
             %tr
               %th{scope:"row"} 参加費用
               %td
@@ -83,9 +84,41 @@
             %tr
               %th{scope:"row"} 開催場所（地図）
               %td
-                = @event.address
+                #map
             %tr
               %th{scope:"row"} イベント補足
               %td
                 = simple_format(@event.introduction)
 
+- latitude = @latitude
+- longitude = @longitude
+- address = @address
+
+%div{type: "text/javascript"}
+  :javascript
+    function initMap() {
+      var test = {lat: #{latitude}, lng: #{longitude}};
+      var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 15, 
+                center: test
+                });
+      var transitLayer = new google.maps.TransitLayer();
+      transitLayer.setMap(map);
+
+      var contentString = "住所： #{address}";
+      var infowindow = new google.maps.InfoWindow({
+        content: contentString
+      });
+
+      var marker = new google.maps.Marker({
+                    position:test,
+                    map: map,
+                    title: contentString
+                    });
+
+      marker.addListener('click', function() {
+        infowindow.open(map, marker);
+      });
+    }
+%script{async: "", defer: "defer", src: "https://maps.googleapis.com/maps/api/js?key=#{Rails.application.credentials.map_api_key}&callback=initMap"}
+ 
