fix/event-design

--- a/app/assets/stylesheets/public/communities.scss
+++ b/app/assets/stylesheets/public/communities.scss
@@ -249,7 +249,7 @@
 
 .community-new-container{
   width: 90%;
-  margin: 0 auto;
+  margin: 0 auto 100px auto;
   .community-new-table{
     border: thick double lightblue;
     .new-img{
@@ -293,7 +293,7 @@ input[type="text"] {
 
 .community-edit-container{
   width: 90%;
-  margin: 0 auto;
+  margin: 0 auto 100px auto;
   .community-edit-table{
     border: thick double lightblue;
     .edit-img{
