--- a/app/views/public/activities/show.html.haml
+++ b/app/views/public/activities/show.html.haml
@@ -75,7 +75,7 @@
                     allowfullscreen: "",
                     frameborder: "0",
                     height: "315",
-                    width: "560"
+                    width: "90%"
                   }
                 - else
                   投稿された動画はありません。
