feature/join-event-design

--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -184,6 +184,10 @@
       font-weight: bold;
       font-size: 20px;
     }
+    .join-member{
+      font-weight: bold;
+      font-size: 20px;
+    }
     input[type="submit"] {
       width: 20%;
       font-size: 15px;
